# vvnextpublic

./: .gitignore  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
config/: inventory.example.yaml  machines.yaml.example  routing_rules.example.yaml  routing_rules.yaml  settings.example.yaml
docs/: advanced.md  architecture.md  quickstart.md
src/vvnext/: allocator.py  audit.py  bootstrap.py  cli.py  collector.py  config_generator.py  deploy.py  dns.py  health.py  inventory.py  keys.py  overlay.py  probe.py  settings.py  ssh.py  state.py
src/vvnext/subscription/: builder.py  classifier.py  server.py
src/vvnext/subscription/formats/: mihomo.py  shadowrocket.py  singbox.py
tests/: conftest.py
tests/integration/: test_init_flow.py
tests/unit/: test_audit.py  test_bootstrap.py  test_classifier.py  test_cli.py  test_config_generator.py  test_deploy.py  test_dns.py  test_edge_cases.py  test_health.py  test_inventory.py  test_keys.py  test_overlay.py  test_settings.py  test_state.py  test_sub_server.py  test_subscription.py
